# fastapi-template

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  start.sh  wait-for-it.py
.devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: initialize  initialize.cmd
app/: api.py  config.py  database.py  models.py  schemas.py  worker.py
app/database/: engine.py  users.py
app/migrate/versions/: 53e4881be978_.py  922a278f54bc_add_a_user_table.py
app/tests/: test_api.py  test_users.py
public/: app.js  index.html  styles.css
scripts/: init_db.sh
